--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,17 @@
-name: CI
-
-on: [push]
+name: Main Branch CI
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   tests:
     name: Unit-Tests
-    runs-on: macOS-latest
+    runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: run unit tests
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Run unit tests
         run: |
           swift test --enable-code-coverage
       - name: Upload coverage to Codecov
@@ -18,4 +21,26 @@ jobs:
           file: ./.build/debug/codecov/WebsocketKit.json
           flags: unittests
           name: codecov-umbrella
-          fail_ci_if_error: true
+          fail_ci_if_error: true    
+  update_documentation:
+    name: Update documentation
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Generate documentation
+        uses: SwiftDocOrg/swift-doc@master
+        with:
+          inputs: "Sources"
+          module-name: WebSocketKit
+          output: "docs"
+          format: "html"
+          base-url: "https://alexanderwe.github.io/WebSocketKit"
+      - name: Commit documentation
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add ./docs/**
+          git commit -m "Generate documentation"
+          git push
